objects/User_Credit_Card_Application__c/User_Credit_Card_Application__c.object-meta.xml
<CustomObject>
    <label>User Credit Card Application</label>
    <nameField>
        <label>Full Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>User Credit Card Applications</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>