objects/User_Credit_Card_Application__c/fields/Annual_Income__c.field-meta.xml
<CustomField>
    <fullName>Annual_Income__c</fullName>
    <description>This field stores the annual income of the applicant.</description>
    <label>Annual Income</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>