objects/User_Credit_Card_Application__c/fields/DOB__c.field-meta.xml
<CustomField>
    <fullName>DOB__c</fullName>
    <description>This text stores the date of birth of applicant.</description>
    <label>DOB</label>
    <required>true</required>
    <type>Date</type>
</CustomField>