objects/User_Credit_Card_Application__c/fields/Residential_Address__c.field-meta.xml
<CustomField>
    <fullName>Residential_Address__c</fullName>
    <description>Address of the applicant.</description>
    <label>Residential Address</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>